--- a/views/private/admin.ejs
+++ b/views/private/admin.ejs
@@ -115,6 +115,7 @@
                                                 <option>(Select Role)</option>
                                                 <option>accounts</option>
                                                 <option>admin</option>
+                                                <option>supervisor</option>
                                                 <option>viewer</option>
                                                 <option>su</option>
                                             </select>
@@ -170,6 +171,7 @@
                                                     <option>(Select Role)</option>
                                                 <option>accounts</option>
                                                 <option>admin</option>
+                                                <option>supervisor</option>
                                                 <option>viewer</option>
                                                 <option>su</option>
                                                 </select>
@@ -224,7 +226,7 @@
     <div class="col-lg-12">
         <div class="panel panel-info">
             <div class="panel-heading">
-                <h3 class="panel-title"><i class="fa fa fa-building fa-fw"></i> Payment / Training Centers</h3>
+                <h3 class="panel-title"><i class="fa fa fa-building fa-fw"></i> Payment > Rebate > Training Centers</h3>
             </div>
             <div class="panel-body">
                 <ul class="nav nav-tabs" role="tablist">
@@ -576,7 +578,19 @@
                                                                     <a name="update:<%=types[i].id%>" href='#tab-type-update' role='tab' data-toggle='tab'><i class='fa fa-pencil-square-o'></i></a>
                                                                 </td>
                                                               <td><%=types[i].description %></td>
-                                                              <td><%=types[i].module === 1 ? "Payment" : "Expense" %></td>
+                                                              <td><% 
+                                                              switch (types[i].module) {
+                                                              case 1:
+                                                                  %>Payment<%
+                                                                  break;
+                                                              case 2:
+                                                                  %>Expense<%
+                                                                  break;
+                                                              case 3:
+                                                                  %>Collectible<%
+                                                                  break;
+                                                              }
+                                                              %></td>
                                                               <td><%=types[i].status %></td>
                                                             </tr>
                                                             <% }
@@ -642,6 +656,7 @@
                                              <option>(Select Module)</option>
                                              <option id="1">Payment</option>
                                              <option id="2">Expense</option>
+                                             <option id="4">Collectible</option>
                                         </select>
                                     </div>
                                     <div class="checkbox form-group">
