--- a/views/private/applicant.ejs
+++ b/views/private/applicant.ejs
@@ -239,12 +239,17 @@
                             <span class='glyphicon glyphicon-duplicate' aria-hidden='true'></span>  View Ledger History
                         </button>
                     </a>
-                    <br/><br/>
-                    <div id="applicant-indexCard-message" class="form-group">
-                    </div>
                 </div>
                 <div class="col-lg-6">
                     <h2>Transaction Summary</h2><br/><br/>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="form-group">
+                        <div id="applicant-indexCard-message" class="form-group">
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -417,7 +422,6 @@
                     <div id="cont-applicant-transactions" class="col-lg-8">
                     </div>
                 <% } else { %>
-                    <div class="col-lg-12" id="tab-applicant-indexCard-txListing"><h2>Transaction Listing</h2><a href="report/ledger?id=" target="_blank">Detailed View</a><br/><br/></div>
                     <div id="cont-applicant-transactions" class="col-lg-12">
                     </div>
                 <% } %>
