--- a/views/private/deployment.ejs
+++ b/views/private/deployment.ejs
@@ -1,9 +1,9 @@
 <div class="col-lg-12">
     <div class="col-lg-4">
-        <button id="button-export-deployment" class="btn btn-success">Download</button>
+        <button id="button-export-appstatus" class="btn btn-success">Download</button>
     </div>  
 </div>
-<div id="export-report-deployment" class="row">
+<div id="export-report-appstatus" class="row">
     <div class="col-lg-12">
         <h1 class="page-header">Applicant Status Report</h1>
         <ol class="breadcrumb">
@@ -14,7 +14,7 @@
     </div>
     <div class='col-lg-12'>
         <div class="table-responsive">
-            <table style="font-size: 80%;" id="table-report-deployment" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
+            <table style="font-size: 80%;" id="table-report-appstatus" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
                 <thead>
                     <tr>    
                         <th>Deployment Date</th>
@@ -100,7 +100,7 @@
         </div>
     </div>
     <div class="col-lg-4">
-        <table style="font-size: 80%;" id="table-report-deployment" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
+        <table style="font-size: 80%;" id="table-report-appstatus-summary" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
                 <tbody>
                     <tr>    
                         <td>Total Deployed Applicants</td>
