--- a/views/private/ledger.ejs
+++ b/views/private/ledger.ejs
@@ -1,11 +1,11 @@
 <div class="row"><div class="col-lg-12"><h1 class="page-header">Individual Ledger</h1></div></div>
 <div class="row">
     <div class="col-lg-12">
-        <button id="button-export-deployment" class="btn btn-success">Download</button>
+        <button id="button-export-ledger" class="btn btn-success">Download</button>
     </div>    
 </div>
 <br/>
-<div id="export-report-deployment" class="row">
+<div id="export-report-ledger" class="row">
     <div class="col-lg-4">
         <div class="table-responsive">
             <table style="font-size: 80%;" class="table table-bordered table-hover table-striped" cellspacing="0" width="100%">
